@@ -9,17 +9,19 @@ Alias /common/ %%install_dir%%/html/common/
 CustomLog %%install_dir%%/logs/access_log combined
 
 # Access control
+# Restrict everything except networks defined in pf's configuration (except other Location exception below)
 <DirectoryMatch "%%install_dir%%/html/captive-portal">
   Order deny,allow
   Deny from all
   allow from %%routed-nets%% 127.0.0.1
 </DirectoryMatch>
 
-# Allow email confirmation from everywhere
-# TODO we could hide this behind a configuration flag that is enabled by default
-# Warning: old cgi style URL deprecated will be removed in an upcoming release
-# Still accepted for a transition period. To be deprecated in 2012.
-<Location ~ "/email_activation\.cgi|/content/">
+# Allowed from everywhere
+# /signup open only if pre-registration
+# /activate/email on sponsor and email guest modes 
+# /content always opened
+# allowed_from_all_URLs is provided by lib/pf/services/apache.pm (and comes with a | first but not after)
+<Location ~ "/content/%%allowed_from_all_urls%%">
   Allow from all
 </Location>
 
