@@ -16,8 +16,6 @@
 -A input-management-if --match state --state NEW --match tcp --protocol tcp --dport 22 --jump ACCEPT
 # Web Admin
 -A input-management-if --protocol tcp --match tcp --dport %%web_admin_port%% --jump ACCEPT
-# HTTPS for email confirmation on the captive portal
--A input-management-if --protocol tcp --match tcp --dport 443 --jump ACCEPT
 # RADIUS
 -A input-management-if --protocol tcp --match tcp --dport 1812 --jump ACCEPT
 -A input-management-if --protocol udp --match udp --dport 1812 --jump ACCEPT
@@ -30,6 +28,8 @@
 -A input-management-if --protocol tcp --match tcp --dport 67  --jump ACCEPT
 # OpenVAS Administration Interface
 -A input-management-if --protocol tcp --match tcp --dport 9392 --jump ACCEPT
+# HTTPS for email confirmation or sponsor activation on the captive portal (if enabled)
+%%input_mgmt_guest_rules%%
 
 :input-internal-vlan-if - [0:0]
 # DNS
